--- a/index.html
+++ b/index.html
@@ -17,7 +17,50 @@
 <body>
 
     <!-- navbar -->
-
+    <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
+        <div class="container-fluid mx-lg-5">
+            <!-- logo -->
+            <a class="navbar-brand" href="https://ahmed-mustafa-kamel.netlify.app/">
+                <img src="./Images/logo-no-background.png" alt="" height="40">
+            </a>
+            <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                    </svg>
+                </span>
+            </a>
+        </div>
+        <!-- links -->
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-2 d-flex">
+                <li class="nav-item">
+                    <a class="nav-link mx-3" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
+                        href="#Home">Home</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
+                        href="#About">About</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
+                        href="#skills">Skills</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
+                        href="#services">Services</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
+                        href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- home section-->
     <section class="container-fluid d-flex flex-wrap" id="Home">
