--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <!-- home section-->
+    <!---------------------------------------------------------- ------home section-->
     <section class="container-fluid d-flex flex-wrap" id="Home">
         <!-- text container -->
         <div style="margin-bottom: 3rem;" id="textContainer" class="py-5 mx-auto">
@@ -86,7 +86,7 @@
         </div>
     </section>
 
-    <!-- about section -->
+    <!-----------------------------------------------------------------about section -->
     <section class="container-fluid d-flex flex-wrap py-5" id="About">
         <!-- text -->
         <div id="content-text" class="mx-auto ">
@@ -107,7 +107,7 @@
         </div>
         <!-- image -->
         <div id="about-img" class="d-flex justify-content-center mx-auto">
-            <img class="align-self-center" src="./images/Webinar-pana.png" alt="">
+            <img class="align-self-center" src="./Images/Webinar-pana.png">
         </div>
         <!-- resume btn -->
         <div class="container my-3 ">
@@ -117,7 +117,7 @@
         </div>
     </section>
 
-    <!--My Skills Sectioin-->
+    <!----------------------------------------------------------------My Skills Sectioin-->
     <section id="skills" class="container-fluid py-5 text-center ">
         <!-- title -->
         <h1 class="fw-bold"><span>Skills</span></h1>
@@ -142,7 +142,7 @@
         </div>
     </section>
 
-    <!-- services -->
+    <!----------------------------------------------------------------services -->
     <section id="services" class="py-5">
 
         <h1 class="fw-bold mx-auto"><span>Services</span></h1>
@@ -176,7 +176,7 @@
 
     </section>
 
-    <!-- contact section -->
+    <!---------------------------------------------------------------- contact section -->
     <section id="contact" class=" py-5">
         <div class="container d-flex justify-content-center align-content-center">
             <h1 class="fw-bold"><span>Contact</span></h1>
@@ -245,7 +245,7 @@
 
     </section>
 
-    <!-- footer -->
+    <!-- ----------------------------------------------------------------footer -->
     <footer class=" py-3">
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
