--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
         <!-- image -->
 
         <div id="skills-img" class="d-flex justify-content-center mx-auto">
-            <img src="./images/Resume-bro.png">
+            <img src="./Images/Resume-bro.png">
         </div>
 
         <div id="content-skills" class="container-fluid d-flex justify-content-center flex-wrap">
-            <div class="skill"><img src="../images/html.skill.png"></div>
-            <div class="skill"><img src="../images/css.skill.png"></div>
-            <div class="skill"><img src="../images/javascript.skill.png"></div>
-            <div class="skill"><img src="../images/bootstrap.skill.png"></div>
-            <div class="skill"><img src="../images/react.skill.png"></div>
-            <div class="skill"><img src="../images/php.skill.png"></div>
+            <div class="skill"><img src="./images/html.skill.png"></div>
+            <div class="skill"><img src="./images/css.skill.png"></div>
+            <div class="skill"><img src="./images/javascript.skill.png"></div>
+            <div class="skill"><img src="./images/bootstrap.skill.png"></div>
+            <div class="skill"><img src="./images/react.skill.png"></div>
+            <div class="skill"><img src="./images/php.skill.png"></div>
             <!-- <div class="skill"><img src="../images/laravel.skill.png"></div> -->
-            <div class="skill"><img src="../images/jquery.skill(1).png"></div>
-            <div class="skill"><img src="../images/git.skill.png"></div>
+            <div class="skill"><img src="./images/jquery.skill(1).png"></div>
+            <div class="skill"><img src="./images/git.skill.png"></div>
             <div class="skill"><img src="./Images/node-js-png.png"></div>
             <div class="skill"><img src="./Images/mongodb.png"></div>
         </div>
@@ -250,7 +250,7 @@
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
             <a href="https://ahmed-mustafa-kamel.netlify.app/">
-                <div class="nav-pic"><img src="./images/logo-no-background.png" height="20"></div>
+                <div class="nav-pic"><img src="./Images/logo-no-background.png" height="20"></div>
             </a>
 
         </div>
