--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </div>
 
         <div id="content-skills" class="container-fluid d-flex justify-content-center flex-wrap">
-            <div class="skill"><img src="./images/html.skill.png"></div>
-            <div class="skill"><img src="./images/css.skill.png"></div>
-            <div class="skill"><img src="./images/javascript.skill.png"></div>
+            <div class="skill"><img src="./Images/html.skill.png"></div>
+            <div class="skill"><img src="./Images/css.skill.png"></div>
+            <div class="skill"><img src="./Images/javascript.skill.png"></div>
             <div class="skill"><img src="./images/bootstrap.skill.png"></div>
             <div class="skill"><img src="./images/react.skill.png"></div>
             <div class="skill"><img src="./images/php.skill.png"></div>
