--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="skill"><img src="./Images/html.skill.png"></div>
             <div class="skill"><img src="./Images/css.skill.png"></div>
             <div class="skill"><img src="./Images/javascript.skill.png"></div>
-            <div class="skill"><img src="./images/bootstrap.skill.png"></div>
+            <div class="skill"><img src="./Images/bootstrap.skill.png"></div>
             <div class="skill"><img src="./images/react.skill.png"></div>
             <div class="skill"><img src="./images/php.skill.png"></div>
             <!-- <div class="skill"><img src="../images/laravel.skill.png"></div> -->
