--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
             <div class="skill"><img src="./Images/css.skill.png"></div>
             <div class="skill"><img src="./Images/javascript.skill.png"></div>
             <div class="skill"><img src="./Images/bootstrap.skill.png"></div>
-            <div class="skill"><img src="./images/react.skill.png"></div>
-            <div class="skill"><img src="./images/php.skill.png"></div>
+            <div class="skill"><img src="./Images/react.skill.png"></div>
+            <div class="skill"><img src="./Images/php.skill.png"></div>
             <!-- <div class="skill"><img src="../images/laravel.skill.png"></div> -->
-            <div class="skill"><img src="./images/jquery.skill(1).png"></div>
-            <div class="skill"><img src="./images/git.skill.png"></div>
+            <div class="skill"><img src="./Images/jquery.skill(1).png"></div>
+            <div class="skill"><img src="./Images/git.skill.png"></div>
             <div class="skill"><img src="./Images/node-js-png.png"></div>
             <div class="skill"><img src="./Images/mongodb.png"></div>
         </div>
