--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
-            <a class="navbar-brand" href="https://ahmed-mustafa-kamel.netlify.app/">
+            <a class="navbar-brand" href="https://ahmed-mustafa-kamel.github.io/site/">
                 <img src="./Images/logo-no-background.png" alt="" height="40">
             </a>
             <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
@@ -249,7 +249,7 @@
     <footer class=" py-3">
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
-            <a href="https://ahmed-mustafa-kamel.netlify.app/">
+            <a href="https://ahmed-mustafa-kamel.github.io/site/">
                 <div class="nav-pic"><img src="./Images/logo-no-background.png" height="20"></div>
             </a>
 
