--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             <p>
                 I'm a Fullstack Web Developer from Egypt.
                 <br>My interest in web development began in 2020,<br>
-                and I've passion about creating things that live on internet. <br>I take pride in
-                providing clean code and perfect design for the
+                and I've passion about creating things<br class="d-lg-none"> that live on internet. <br>I take pride in
+                providing clean code <br class="d-lg-none">and perfect design for the
                 projects I work on. <br>
                 I have the skills to make them more interactive.<br>
                 I believe that a responsive design is crucial for ensuring accessibility to all users,
                 regardless of device they're using.<br>
                 As a Fullstack Web Developer,<br>
-                I have expertise in both front-end and back-end development,<br>
+                I have expertise in both front-end<br class="d-lg-none"> and back-end development,<br>
                 enabling me to work on all aspects of web applications.<br>
 
         </div>
