--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
 <body class="">
 
+    <div id="loader" class="d-flex justify-content-center">
+        <img class="my-auto" id="circleLoader" src="./Images/pattern5.png">
+
+    </div>
+
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
         <div class="container-fluid mx-lg-5">
@@ -286,6 +292,8 @@
 
 
 
+    <script src="script.js">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
