--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!---------------------------------------------------------- ------home section-->
     <section class="container-fluid d-flex flex-wrap" id="Home">
         <!-- text container -->
-        <div style="margin-bottom: 4rem;" id="textContainer" class="py-5 mx-auto">
+        <div id="textContainer" class="py-5 mx-auto">
             <h3 class="fw-bold">Hello!, My name is</h3>
             <h1 class="fw-bold">Ahmed Mustafa Kamel</h1>
             <h3 class="fw-bold">
@@ -94,7 +94,7 @@
     </section>
 
     <!-----------------------------------------------------------------about section -->
-    <section class="container-fluid d-flex flex-wrap py-5" id="About">
+    <section class="container-fluid d-flex flex-wrap py-5 px-sm-1" id="About">
         <!-- text -->
         <div id="content-text" class="mx-auto ">
             <h1 class="fw-bold"><span>About Me</span></h1>
