--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
 
     <!-----------------------------------------------------------------about section -->
-    <section class="container-fluid d-flex flex-wrap py-5 px-sm-1" id="About">
+    <section class="container-fluid d-flex flex-wrap py-5 px-sm-0" id="About">
         <!-- text -->
         <div id="content-text" class="mx-auto ">
             <h1 class="fw-bold"><span>About Me</span></h1>
@@ -105,7 +105,8 @@
                 providing clean code <br class="d-lg-none">and perfect design for the
                 projects I work on. <br>
                 I have the skills to make them more interactive.<br>
-                I believe that a responsive design is crucial for ensuring accessibility to all users,
+                I believe that a responsive design is crucial for ensuring accessibility to all users,<br
+                    class="d-lg-none">
                 regardless of device they're using.<br>
                 As a Fullstack Web Developer,<br>
                 I have expertise in both front-end<br class="d-lg-none"> and back-end development,<br>
