--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <body class="">
 
     <div id="loader" class="d-flex justify-content-center">
-        <img class="my-auto" id="circleLoader" src="./Images/pattern5.png">
+        <!-- <img class="my-auto" id="circleLoader" src="./Images/pattern5.png"> -->
+        <div style="top: 50%;" class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
     </div>
 
