--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
     </section>
 
     <!-----------------------------------------------------------------about section -->
-    <section class="container-fluid d-flex flex-wrap py-5 px-sm-0" id="About">
+    <section class="container-fluid d-flex flex-wrap py-5" id="About">
         <!-- text -->
-        <div id="content-text" class="mx-auto ">
+        <div class="container-fluid d-flex justify-content-start">
+
             <h1 class="fw-bold"><span>About Me</span></h1>
+        </div>
+        <div id="content-text" class=" d-flex flex-wrap">
             <p>
                 I'm a Fullstack Web Developer from Egypt.
                 <br>My interest in web development began in 2020,<br>
@@ -111,8 +114,7 @@
                 providing clean code <br class="d-lg-none">and perfect design for the
                 projects I work on. <br>
                 I have the skills to make them more interactive.<br>
-                I believe that a responsive design is crucial for ensuring accessibility to all users,<br
-                    class="d-lg-none">
+                I believe that a responsive design is crucial for ensuring accessibility to all users,<br>
                 regardless of device they're using.<br>
                 As a Fullstack Web Developer,<br>
                 I have expertise in both front-end<br class="d-lg-none"> and back-end development,<br>
