--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!--  image container -->
         <div id="imgContainer" class=" d-flex justify-content-center  mx-auto">
-            <img src="./Images/1683119322117.png" style="z-index: 1;">
+            <img id="mypic" src="./Images/1683119322117.png" style="z-index: 1;">
             <img id="circle" src="./Images/pattern5.png">
         </div>
     </section>
