--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../images/iconpic.png">
+    <link rel="icon" href="../images/iconpic.webp">
     <meta name="keywords" content="Ahmed Mustafa,Ahmed Mustafa Developer, Web,Developer, web developer, Web Developer">
+    <meta name="description"
+        content="Ahmed Mustafa Kamel - Fullstack Web Developer from Egypt. Passionate about creating clean and interactive web applications. Specializing in both front-end and back-end development. Contact Ahmed Mustafa Kamel for your web development needs.">
     <title>Ahmed-Mustafa-Kamel</title>
-    <link rel="icon" href="./Images/Webinar-pana.png" width="40">
+    <link rel="icon" href="./Images/Webinar-pana.webp" width="40">
     <meta name="keywords" content="Ahmed Mustafa,Ahmed Mustafa Developer, Web,Developer, web developer, Web Developer">
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +20,6 @@
 <body class="">
 
     <div id="loader" class="d-flex justify-content-center">
-        <!-- <img class="my-auto" id="circleLoader" src="./Images/pattern5.png"> -->
         <div style="top: 50%;" class="loader">
             <span></span>
             <span></span>
@@ -34,7 +35,7 @@
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
             <a class="navbar-brand" href="https://ahmed-mustafa-kamel.github.io/site/">
-                <img src="./Images/logo-no-background.png" alt="" height="40">
+                <img src="./Images/logo-no-background.webp" alt="Ahmed Mustafa logo" height="40">
             </a>
             <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -94,8 +95,8 @@
 
         <!--  image container -->
         <div id="imgContainer" class=" d-flex justify-content-center  mx-auto">
-            <img id="mypic" src="./Images/1683119322117.png" style="z-index: 1;">
-            <img id="circle" src="./Images/pattern5.png">
+            <img id="mypic" src="./Images/1683119322117.webp" style="z-index: 1;" alt="ahmeds pic">
+            <img id="circle" src="./Images/pattern5.webp" alt="circle shape">
         </div>
     </section>
 
@@ -123,7 +124,7 @@
         </div>
         <!-- image -->
         <div id="about-img" class="d-flex justify-content-center mx-auto">
-            <img class="align-self-center" src="./Images/Webinar-pana.png">
+            <img class="align-self-center" src="./Images/Webinar-pana.webp" alt="about photo">
         </div>
         <!-- resume btn -->
         <div class="container my-3 ">
@@ -140,21 +141,21 @@
         <!-- image -->
 
         <div id="skills-img" class="d-flex justify-content-center mx-auto">
-            <img src="./Images/Resume-bro.png">
+            <img src="./Images/Resume-bro.webp" alt="skills main photo">
         </div>
 
         <div id="content-skills" class="container-fluid d-flex justify-content-center flex-wrap">
-            <div class="skill"><img src="./Images/html.skill.png"></div>
-            <div class="skill"><img src="./Images/css.skill.png"></div>
-            <div class="skill"><img src="./Images/javascript.skill.png"></div>
-            <div class="skill"><img src="./Images/bootstrap.skill.png"></div>
-            <div class="skill"><img src="./Images/react.skill.png"></div>
-            <div class="skill"><img src="./Images/php.skill.png"></div>
-            <!-- <div class="skill"><img src="../images/laravel.skill.png"></div> -->
-            <div class="skill"><img src="./Images/jquery.skill(1).png"></div>
-            <div class="skill"><img src="./Images/git.skill.png"></div>
-            <div class="skill"><img src="./Images/node-js-png.png"></div>
-            <div class="skill"><img src="./Images/mongodb.png"></div>
+            <div class="skill"><img src="./Images/html.skill.webp" alt="html"></div>
+            <div class="skill"><img src="./Images/css.skill.webp" alt="css"></div>
+            <div class="skill"><img src="./Images/javascript.skill.webp" alt="javascript"></div>
+            <div class="skill"><img src="./Images/bootstrap.skill.webp" alt="bootstrap"></div>
+            <div class="skill"><img src="./Images/react.skill.webp" alt="react"></div>
+            <div class="skill"><img src="./Images/php.skill.webp" alt="php"></div>
+            <!-- <div class="skill"><img src="../images/laravel.skill.webp"></div> -->
+            <div class="skill"><img src="./Images/jquery.skill(1).webp" alt="jquery"></div>
+            <div class="skill"><img src="./Images/git.skill.webp" alt="git"></div>
+            <div class="skill"><img src="./Images/node-js-png.webp" alt="node js"></div>
+            <div class="skill"><img src="./Images/mongodb.webp" alt="mongodb"></div>
         </div>
     </section>
 
@@ -266,7 +267,7 @@
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
             <a href="https://ahmed-mustafa-kamel.github.io/site/">
-                <div class="nav-pic"><img src="./Images/logo-no-background.png" height="20"></div>
+                <div class="nav-pic"><img src="./Images/logo-no-background.webp" height="20"></div>
             </a>
 
         </div>
