--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body class="">
 
+    <!---------------------------------------------------------------- loader -->
     <div id="loader" class="d-flex justify-content-center">
         <div style="top: 50%;" class="loader">
             <span></span>
@@ -30,7 +31,7 @@
     </div>
 
 
-    <!-- navbar -->
+    <!---------------------------------------------------------------- navbar -->
     <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
@@ -145,17 +146,20 @@
         </div>
 
         <div id="content-skills" class="container-fluid d-flex justify-content-center flex-wrap">
-            <div class="skill"><img src="./Images/html.skill.webp" alt="html"></div>
-            <div class="skill"><img src="./Images/css.skill.webp" alt="css"></div>
-            <div class="skill"><img src="./Images/javascript.skill.webp" alt="javascript"></div>
-            <div class="skill"><img src="./Images/bootstrap.skill.webp" alt="bootstrap"></div>
-            <div class="skill"><img src="./Images/react.skill.webp" alt="react"></div>
-            <div class="skill"><img src="./Images/php.skill.webp" alt="php"></div>
+            <div class="skill">
+                <img src="./Images/html.skill.webp" alt="html">
+                HTML
+            </div>
+            <div class="skill"><img src="./Images/css.skill.webp" alt="css">CSS</div>
+            <div class="skill"><img src="./Images/javascript.skill.webp" alt="javascript">Javascript</div>
+            <div class="skill"><img src="./Images/bootstrap.skill.webp" alt="bootstrap">Bootstrap</div>
+            <div class="skill"><img src="./Images/react.skill.webp" alt="react">React</div>
+            <div class="skill"><img src="./Images/php.skill.webp" alt="php">Php</div>
             <!-- <div class="skill"><img src="../images/laravel.skill.webp"></div> -->
-            <div class="skill"><img src="./Images/jquery.skill(1).webp" alt="jquery"></div>
-            <div class="skill"><img src="./Images/git.skill.webp" alt="git"></div>
-            <div class="skill"><img src="./Images/node-js-png.webp" alt="node js"></div>
-            <div class="skill"><img src="./Images/mongodb.webp" alt="mongodb"></div>
+            <div class="skill"><img src="./Images/jquery.skill(1).webp" alt="jquery">Jquery</div>
+            <!-- <div class="skill"><img src="./Images/git.skill.webp" alt="git">Git</div> -->
+            <div class="skill"><img src="./Images/node-js-png.webp" alt="node js">Node js</div>
+            <div class="skill"><img src="./Images/mongodb.webp" alt="mongodb">Mongodb</div>
         </div>
     </section>
 
@@ -173,7 +177,7 @@
                             d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0" />
                     </svg>
                 </div>
-                <h3 class="title">Front-End</h3>
+                <h4 class="title">Front-End</h4>
                 <p class="text">The client-side of web development, specifically the part of a website that users
                     interact with directly.</p>
             </div>
@@ -186,7 +190,7 @@
                             d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6" />
                     </svg>
                 </div>
-                <h3 class="title">Back-End</h3>
+                <h4 class="title">Back-End</h4>
                 <p class="text">The server-side of web development, which primarily deals with the behind-the-scenes
                     functionality and data processing</p>
             </div>
@@ -199,31 +203,40 @@
             <h1 class="fw-bold"><span>Contact</span></h1>
         </div>
         <!-- contact cards -->
-        <div id="contactBox" class="d-flex flex-wrap justify-content-around">
+        <div id="contactBox" class="d-flex flex-wrap">
             <!-- card1 -->
-            <div class="Ccard">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor"
+            <div class="container-fluid d-flex p-5 rounded m-3 mx-auto justify-content-start">
+                <div class="mx-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="var(--secondaryColor)"
                         class="bi bi-envelope" viewBox="0 0 16 16">
                         <path
                             d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                     </svg>
                 </div>
-                <p class="title">E-Mail</p>
-                <p class="text">101ahmedmustafa@gmail.com</p>
+                <div>
+                    <h5 style="color: var(--secondaryColor);" class="w-100"> E-Mail:</h5>
+                    <h6 class=""> 101ahmedmustafa@gmail.com</h6>
+                </div>
             </div>
             <!-- card2 -->
-            <div class="Ccard">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor"
+            <div class="container-fluid d-flex p-5 rounded m-3 mx-auto justify-content-start">
+                <div class="mx-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="var(--secondaryColor)"
                         class="bi bi-whatsapp" viewBox="0 0 16 16">
                         <path
                             d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
                     </svg>
                 </div>
-                <p class="title">Whatsapp</p>
-                <p class="text">+20 1552238108</p>
+                <div>
+                    <h5 class="w-100">Whatsapp:</h5>
+                    <h6 class="">+20 1552238108</h6>
+                </div>
             </div>
+
+
+
+
+
             <!-- social media card -->
             <div id="social-div" class="container-fluid d-flex justify-content-center">
                 <div class="so-card rounded">
@@ -267,7 +280,7 @@
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
             <a href="https://ahmed-mustafa-kamel.github.io/site/">
-                <div class="nav-pic"><img src="./Images/logo-no-background.webp" height="20"></div>
+                <div class="nav-pic"><img src="./Images/logo-no-background.webp" height="20" alt="ahmed's logo"></div>
             </a>
 
         </div>
