--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <!-- resume btn -->
         <div class="container my-3 ">
-            <button class="fw-bold mx-5 rounded">
+            <button id="resume" class="fw-bold mx-5 rounded">
                 My Resume
             </button>
         </div>
