--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
-            <a class="navbar-brand" href="https://ahmed-mustafa-kamel.github.io/site/">
+            <a class="navbar-brand" href="https://ahmed-mustafa.netlify.app/">
                 <img src="./Images/logo-no-background.webp" alt="Ahmed Mustafa logo" height="40">
             </a>
             <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
@@ -102,13 +102,13 @@
     </section>
 
     <!-----------------------------------------------------------------about section -->
-    <section class="container-fluid d-flex flex-wrap py-5" id="About">
-        <!-- text -->
-        <div class="container-fluid d-flex justify-content-start">
+    <section class="container-fluid d-flex flex-wrap" id="About">
+        <div id="content-text" class="d-flex flex-wrap">
+            <!-- text -->
+            <div class="container-fluid d-flex justify-content-start">
 
-            <h1 class="fw-bold"><span>About Me</span></h1>
-        </div>
-        <div id="content-text" class=" d-flex flex-wrap">
+                <h1 class="fw-bold"><span>About Me</span></h1>
+            </div>
             <p>
                 I'm a Fullstack Web Developer from Egypt.
                 <br>My interest in web development began in 2020,<br>
@@ -124,7 +124,7 @@
 
         </div>
         <!-- image -->
-        <div id="about-img" class="d-flex justify-content-center mx-auto">
+        <div id="about-img" class="d-flex justify-content-end mx-auto">
             <img class="align-self-center" src="./Images/Webinar-pana.webp" alt="about photo">
         </div>
         <!-- resume btn -->
@@ -281,7 +281,7 @@
     <footer class=" py-3">
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
-            <a href="https://ahmed-mustafa-kamel.github.io/site/">
+            <a href="https://ahmed-mustafa.netlify.app/">
                 <div class="nav-pic"><img src="./Images/logo-no-background.webp" height="20" alt="ahmed's logo"></div>
             </a>
 
