--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg d-flex justify-content-between p-lg-5">
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
-            <a class="navbar-brand" href="https://ahmed-mustafa.netlify.app/">
+            <a id="navLogo" class="navbar-brand" href="https://ahmed-mustafa.netlify.app/">
                 <img src="./Images/logo-no-background.webp" alt="Ahmed Mustafa logo" height="40">
             </a>
             <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
