--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Ahmed Mustafa Kamel - Fullstack Web Developer from Egypt. Passionate about creating clean and interactive web applications. Specializing in both front-end and back-end development. Contact Ahmed Mustafa Kamel for your web development needs.">
     <title>Ahmed-Mustafa-Kamel</title>
-    <link rel="icon" href="./Images/Webinar-pana.webp" width="40">
+    <link rel="icon" href="./Images/fullLogo (2).webp">
     <meta name="keywords" content="Ahmed Mustafa,Ahmed Mustafa Developer, Web,Developer, web developer, Web Developer">
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,7 +36,7 @@
         <div class="container-fluid mx-lg-5">
             <!-- logo -->
             <a id="navLogo" class="navbar-brand" href="https://ahmed-mustafa.netlify.app/">
-                <img src="./Images/logo-no-background.webp" alt="Ahmed Mustafa logo" height="40">
+                <img src="./Images/myLogo.webp" alt="Ahmed Mustafa logo" height="80">
             </a>
             <a class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -54,24 +54,19 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-2 d-flex">
                 <li class="nav-item">
-                    <a class="nav-link mx-3" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
-                        href="#Home">Home</a>
+                    <a id="link1" class="nav-link mx-3" href="#Home">Home</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
-                        href="#About">About</a>
+                    <a id="link2" class="nav-link" href="#About">About</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
-                        href="#skills">Skills</a>
+                    <a id="link3" class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
-                        href="#services">Services</a>
+                    <a id="link3" class="nav-link" href="#services">Services</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" style="color:var(--primaryColor);font-weight: bold;font-size: 1.1em;"
-                        href="#contact">Contact</a>
+                    <a id="link4" class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -85,7 +80,7 @@
             <h1 class="fw-bold">Ahmed Mustafa Kamel</h1>
             <h3 class="fw-bold">
                 I'm <span data-text="Fullstack Developer" id="span-text">
-                    Fullstack Developer
+                    Full Stack Developer
                 </span></h3><br>
             <a class="d-lg-none mb-5 mx-auto" href="#contact">
                 <button class="fw-bold w-100 rounded">
@@ -282,7 +277,7 @@
         <div class="d-flex justify-content-center">
             <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
             <a href="https://ahmed-mustafa.netlify.app/">
-                <div class="nav-pic"><img src="./Images/logo-no-background.webp" height="20" alt="ahmed's logo"></div>
+                <div class="nav-pic"><img id="navLogo" src="./Images/myLogo.webp" height="30" alt="ahmed's logo"></div>
             </a>
 
         </div>
