--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             <div class="skill"><img src="./Images/javascript.skill.webp" alt="javascript">Javascript</div>
             <div class="skill"><img src="./Images/bootstrap.skill.webp" alt="bootstrap">Bootstrap</div>
             <div class="skill"><img src="./Images/react.skill.webp" alt="react">React</div>
-            <div class="skill"><img src="./Images/php.skill.webp" alt="php">Php</div>
+            <!-- <div class="skill"><img src="./Images/php.skill.webp" alt="php">Php</div> -->
             <!-- <div class="skill"><img src="../images/laravel.skill.webp"></div> -->
             <div class="skill"><img src="./Images/jquery.skill(1).webp" alt="jquery">Jquery</div>
-            <!-- <div class="skill"><img src="./Images/git.skill.webp" alt="git">Git</div> -->
+            <div class="skill"><img src="./Images/git.skill.webp" alt="git">Git</div>
             <div class="skill"><img src="./Images/node-js-png.webp" alt="node js">Node js</div>
             <div class="skill"><img src="./Images/mongodb.webp" alt="mongodb">Mongodb</div>
         </div>
