--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
                 <div>
                     <h5 style="color: var(--primaryColor);" class="w-100"> E-Mail:</h5>
-                    <h6 class=""> 101ahmedmustafa@gmail.com</h6>
+                    <h6 class="">ahmedMustafaKamel1@gmail.com</h6>
                 </div>
             </div>
 
