--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="">
 
     <!---------------------------------------------------------------- loader -->
-    <div id="loader" class="d-flex justify-content-center">
+    <!-- <div id="loader" class="d-flex justify-content-center">
         <div style="top: 50%;" class="loader">
             <span></span>
             <span></span>
@@ -28,7 +28,7 @@
             <span></span>
         </div>
 
-    </div>
+    </div> -->
 
 
     <!---------------------------------------------------------------- navbar -->
@@ -203,7 +203,7 @@
 
 
             <!-- card2 -->
-            <div class="container d-flex p-5 rounded m-3 mx-auto justify-content-start">
+            <div id="test" class="d-flex p-5">
                 <div class="mx-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="var(--primaryColor)"
                         class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -219,7 +219,7 @@
 
 
             <!-- card1 -->
-            <div class="container d-flex p-5 rounded m-3 mx-auto justify-content-start">
+            <div id="test" class="d-flex p-5">
                 <div class="mx-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="var(--primaryColor)"
                         class="bi bi-envelope" viewBox="0 0 16 16">
@@ -229,7 +229,7 @@
                 </div>
                 <div>
                     <h5 style="color: var(--primaryColor);" class="w-100"> E-Mail:</h5>
-                    <h6 class="">ahmedMustafaKamel1@gmail.com</h6>
+                    <h6 class="">101ahmedmustafa@gmail.com</h6>
                 </div>
             </div>
 
