--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="">
 
     <!---------------------------------------------------------------- loader -->
-    <!-- <div id="loader" class="d-flex justify-content-center">
+    <div id="loader" class="d-flex justify-content-center">
         <div style="top: 50%;" class="loader">
             <span></span>
             <span></span>
@@ -28,7 +28,7 @@
             <span></span>
         </div>
 
-    </div> -->
+    </div>
 
 
     <!---------------------------------------------------------------- navbar -->
