--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
     <!-- ----------------------------------------------------------------footer -->
     <footer class=" py-3">
         <div class="d-flex justify-content-center">
-            <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p>
+            <!-- <p style="font-size: small;" class="fw-bold">Copyright &copy;All rights reserved | made by</p> -->
+            <p style="font-size: small;" class="fw-bold">made with 🩵 by</p>
             <a href="https://ahmed-mustafa.netlify.app/">
                 <div class="nav-pic"><img id="navLogo" src="./Images/myLogo.webp" height="30" alt="ahmed's logo"></div>
             </a>
